--- a/mapbox_gl_platform_interface/pubspec.yaml
+++ b/mapbox_gl_platform_interface/pubspec.yaml
@@ -1,8 +1,8 @@
 name: mapbox_gl_platform_interface
 description: A common platform interface for the mapbox_gl plugin.
 version: 0.16.0
-homepage: https://github.com/rakesh-chandrapal/maps/tree/custom-branch/mapbox_gl_platform_interface
-
+#homepage: https://github.com/rakesh-chandrapal/maps/tree/custom-branch/mapbox_gl_platform_interface
+homepage: https://github.com/tobrun/flutter-mapbox-gl
 dependencies:
   flutter:
     sdk: flutter
