--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,13 @@
 name: mapbox_gl
 description: A Flutter plugin for integrating Mapbox Maps inside a Flutter application on Android, iOS and web platfroms.
 version: 0.16.0
-homepage: https://github.com/tobrun/flutter-mapbox-gl
+#homepage: https://github.com/tobrun/flutter-mapbox-gl
 
 dependencies:
   flutter:
     sdk: flutter
+  collection: ^1.15.0
+dependency_overrides:
   mapbox_gl_platform_interface:
     git:
       url: https://github.com/rakesh-chandrapal/maps.git
@@ -16,14 +18,6 @@ dependencies:
       url: https://github.com/rakesh-chandrapal/maps.git
       ref: custom-branch
       path: mapbox_gl_web
-  collection: ^1.15.0
-
-dependency_overrides:
-  mapbox_gl_platform_interface:
-    path: ./mapbox_gl_platform_interface
-  mapbox_gl_web:
-    path: ./mapbox_gl_web
-
 flutter:
   plugin:
     platforms:
